# google-calendar-mcp-server

./: .dockerignore  .gitignore  Dockerfile  README.md  debug_google_client_stack.py  docker-compose.yml  google_calendar_mcp_server.py  pyproject.toml  requirements.txt
.github/: workflows
.github/workflows/: build-and-push.yaml  build-and-push.yml
google_calendar_mcp/: __init__.py  __main__.py  auth.py  config.py  server.py  utils.py
google_calendar_mcp/tools/: __init__.py  check_availability.py  create_event.py  delete_event.py  get_events.py  list_calendars.py
